--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
     <application
         android:name=".ParseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/logotipo"
+        android:label="@string/nombre_app"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
@@ -81,7 +81,7 @@
         </activity>
         <activity
             android:name=".splash"
-            android:label="@string/title_activity_splash" >
+            android:label="@string/nombre_app" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
