--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <!-- Call permission -->
-    <uses-permission android:name="android.permission.CALL_PHONE" ></uses-permission>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:name=".ParseApplication"
@@ -65,6 +65,10 @@
         <activity
             android:name=".Emergencias"
             android:label="@string/title_activity_emergencias" >
+        </activity>
+        <activity
+            android:name=".Informacion"
+            android:label="@string/title_activity_informacion" >
         </activity>
     </application>
 
