--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,15 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile(name:'kinvey-android-2.10.8', ext:'aar')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.parse.bolts:bolts-android:1.+'
